/************************************************************************************
 * Copyright (C) 2012-2018 E.R.P. Consultores y Asociados, C.A.                     *
 * Contributor(s): Yamel Senih ysenih@erpya.com                                     *
 * This program is free software: you can redistribute it and/or modify             *
 * it under the terms of the GNU General Public License as published by             *
 * the Free Software Foundation, either version 2 of the License, or                *
 * (at your option) any later version.                                              *
 * This program is distributed in the hope that it will be useful,                  *
 * but WITHOUT ANY WARRANTY; without even the implied warranty of                   *
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.	See the                     *
 * GNU General Public License for more details.                                     *
 * You should have received a copy of the GNU General Public License                *
 * along with this program.	If not, see <https://www.gnu.org/licenses/>.            *
 ************************************************************************************/
syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.spin.grpc.util";
option java_outer_classname = "ADempierePOS";
option objc_class_prefix = "HLW";

import "proto/core_functionality.proto";
import "proto/base_data_type.proto";

package data;

//	POS Service used for ADempiere integration
service Store {
	//	Get POS Definition
	rpc GetPointOfSales(PointOfSalesRequest) returns (PointOfSales) {}
	//	List Point of Sales
	rpc ListPointOfSales(ListPointOfSalesRequest) returns (ListPointOfSalesResponse) {}
	//	Get Product Price from Code / UPC / Name
	rpc GetProductPrice(GetProductPriceRequest) returns (ProductPrice) {}
	//	Create Order
	rpc CreateOrder(CreateOrderRequest) returns (Order) {}
	//	Delete Order
	rpc DeleteOrder(DeleteOrderRequest) returns (Empty) {}
	//	Create Order Line
	rpc CreateOrderLine(CreateOrderLineRequest) returns (OrderLine) {}
	//	Delete Order Line
	rpc DeleteOrderLine(DeleteOrderLineRequest) returns (OrderLine) {}
	//	Update Order Line
	rpc UpdateOrderLine(UpdateOrderLineRequest) returns (OrderLine) {}
}

//	List POS Response
message ListPointOfSalesResponse {
	int64 recordCount = 1;
	repeated PointOfSales sellingPoints = 2;
	string next_page_token = 3;
}

// POS from user uuid
message ListPointOfSalesRequest {
	ClientRequest clientRequest = 1;
	string userUuid = 2;
	int32 page_size = 3;
	string page_token = 4;
}

// Point of Sales request
message PointOfSalesRequest {
	ClientRequest clientRequest = 1;
	string pointOfSalesUuid = 2;
}

// Point of Sales definition
message PointOfSales {
	string uuid = 1;
	string name = 2;
	string description = 3;
	string help = 4;
	bool isModifyPrice = 5;
	bool isPOSRequiredPIN = 6;
	SalesRepresentative salesRepresentative = 7;
	BusinessPartner templateBusinessPartner = 8;
}

// Request for create a order
message CreateOrderRequest {
	ClientRequest clientRequest = 1;
	string posUuid = 2;
	string customerUuid = 3;
	string documentTypeUuid = 4;
}

// Request for delete a order
message DeleteOrderRequest {
	ClientRequest clientRequest = 1;
	string orderUuid = 2;
}

// Request for delete a order
message DeleteOrderLineRequest {
	ClientRequest clientRequest = 1;
	string orderLineUuid = 2;
}

// Request for create a order line
message CreateOrderLineRequest {
	ClientRequest clientRequest = 1;
	string orderUuid = 2;
	string productUuid = 3;
	string chargeUuid = 4;
	string description = 5;
	Decimal quantity = 6;
	Decimal price = 7;
	Decimal discountRate = 8;
	string warehouseUuid = 9;
}

// Request for update a order line
message UpdateOrderLineRequest {
	ClientRequest clientRequest = 1;
	string orderUuid = 2;
	string description = 5;
	Decimal quantity = 6;
	Decimal price = 7;
	Decimal discountRate = 8;
}

// Sales Order
message Order {
	string uuid = 1;
	string documentNo = 2;
	DocumentType documentType = 3;
	SalesRepresentative salesRepresentative = 4;
	string documentStatus = 5;
	Decimal totalLines = 6;
	Decimal grandTotal = 7;
}

// Sales Order Line
message OrderLine {
	string uuid = 1;
	string orderUuid = 2;
	Product product = 3;
	Charge charge = 4;
	string lineDescription = 5;
	string description = 6;
	Warehouse warehouse = 7;
	Decimal quantity = 8;
	Decimal price = 9;
	Decimal discountRate = 10;
	TaxRate taxRate = 11;
	Decimal lineNetAmount = 12;
}

// Request Product Price
message GetProductPriceRequest {
	ClientRequest clientRequest = 1;
	string searchValue = 2;
	string upc = 3;
	string value = 4;
	string name = 5;
	string priceListUuid = 6;
	string businessPartnerUuid = 7;
	string warehouseUuid = 8;
	int64 validFrom = 9;
}
